crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__variable__early_bound.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/early_bound.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var a (global @3) "outer")
   (block
      (fun foo (local @4) [] []
         (block
            (print (global a @3))))
      (expr (call +5 (local foo @4)))
      (var a (local @5) "inner")
      (expr (call +6 (local foo @4)))))

----- stderr -----
