crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__variable__local_from_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/local_from_method.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var foo (global @1) "variable")
   (class Foo (global @2) ∅
      (method method [(local this @0)] []
         (block
            (print (global foo @1)))))
   (expr (call +3 (attr (call +3 (global Foo @2)) method))))

----- stderr -----
