crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__variable__shadow_local.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/shadow_local.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (block
      (var a (local @1) "local")
      (block
         (var a (local @2) "shadow")
         (print (local a @2)))
      (print (local a @1))))

----- stderr -----
