crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__variable__use_global_in_initializer.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/use_global_in_initializer.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var a (global @3) "value")
   (var a (global @3) (global a @3))
   (print (global a @3)))

----- stderr -----
