crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__variable__use_local_in_initializer.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/variable/use_local_in_initializer.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var a (global @3) "outer")
   (block
      (var a (local @4) (global a @3))))

----- stderr -----
